[metadata]
name = cactive
description_file=README.md
license_files=LICENSE.md
version = 1.0.0
author = Cactive
author_email = legal@cactive.network
description = All of the Cactive NPM modules rewritten in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CactiveNetwork/cactive-rewrites/tree/main/python/
project_urls =
    Bug Tracker = https://github.com/CactiveNetwork/cactive-rewrites/tree/main/python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    requests==2.28.1

[options.packages.find]
where = src